--- a/index.html
+++ b/index.html
@@ -49,5 +49,13 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <div class="logo"></div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
